--- a/src/styles/foodItem.css
+++ b/src/styles/foodItem.css
@@ -1,6 +1,6 @@
 .product-item {
     width: 100%;
-    height: 350px; /* Set a fixed height for the cards */
+    height: 350px;
     margin: auto;
     border-radius: 15px;
     box-shadow: 0px 0px 10px #00000015;
@@ -13,22 +13,23 @@
 
 .product-item-image-container {
     width: 100%;
-    height: 60%; /* Reserve 60% of the card's height for the image */
+    height: 60%;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative; /* Add this to ensure position of buttons */
 }
 
 .product-item-image {
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensure images cover the container without stretching */
+    object-fit: cover;
 }
 
 .product-item-info {
     padding: 20px;
-    height: 40%; /* Reserve 40% of the card's height for the info */
+    height: 40%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -53,7 +54,7 @@
 .product-item-desc {
     color: #676767;
     font-size: 12px;
-    flex-grow: 1; /* Allow description to take available space */
+    flex-grow: 1;
 }
 
 .product-item-price {
@@ -62,4 +63,31 @@
     font-weight: 500;
     margin: 10px 0px;
     text-align: right;
+}
+
+.add {
+    width: 35px;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    cursor: pointer;
+    border-radius: 50%;
+}
+
+.product-item-counter {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 6px;
+    border-radius: 50px;
+    background-color: white;
+    z-index: 10;
+}
+
+.product-item-counter img {
+    width: 30px;
+    cursor: pointer;
 }
